[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/augment_panel.png" type="Texture" id=1]
[ext_resource path="res://Scenes/AugmentScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/placeholder_object3.png" type="Texture" id=3]
[ext_resource path="res://Assets/placeholder_object6.png" type="Texture" id=4]
[ext_resource path="res://Assets/placeholder_object4.png" type="Texture" id=5]
[ext_resource path="res://Assets/placeholder_object5.png" type="Texture" id=6]
[ext_resource path="res://Resources/default_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Objects/PlacementDetector.tscn" type="PackedScene" id=8]

[node name="AugmentScreen" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="AugmentPanel" type="Sprite" parent="."]
position = Vector2( 200, 150 )
texture = ExtResource( 1 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 33.0
margin_top = 38.0
margin_right = 367.0
margin_bottom = 70.0
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]PICK 1 AUGMENT"
text = "PICK 1 AUGMENT"

[node name="PlaceholderObject3" type="Sprite" parent="."]
position = Vector2( 81, 81 )
texture = ExtResource( 3 )

[node name="PlacementDetector" parent="PlaceholderObject3" instance=ExtResource( 8 )]

[node name="PlaceholderObject4" type="Sprite" parent="."]
position = Vector2( 81, 128 )
texture = ExtResource( 5 )

[node name="PlacementDetector" parent="PlaceholderObject4" instance=ExtResource( 8 )]

[node name="PlaceholderObject5" type="Sprite" parent="."]
position = Vector2( 81, 175 )
texture = ExtResource( 6 )

[node name="PlacementDetector" parent="PlaceholderObject5" instance=ExtResource( 8 )]

[node name="PlaceholderObject6" type="Sprite" parent="."]
position = Vector2( 81, 222 )
texture = ExtResource( 4 )

[node name="PlacementDetector" parent="PlaceholderObject6" instance=ExtResource( 8 )]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 101.0
margin_top = 68.0
margin_right = 337.0
margin_bottom = 100.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 7 )
text = "1"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 101.0
margin_top = 115.0
margin_right = 337.0
margin_bottom = 147.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 7 )
text = "2"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 101.0
margin_top = 162.0
margin_right = 337.0
margin_bottom = 194.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 7 )
text = "3"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
margin_left = 101.0
margin_top = 209.0
margin_right = 337.0
margin_bottom = 241.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 7 )
text = "4"

[connection signal="pressed" from="PlaceholderObject3/PlacementDetector" to="." method="_on_PlacementDetector_pressed1"]
[connection signal="pressed" from="PlaceholderObject4/PlacementDetector" to="." method="_on_PlacementDetector_pressed2"]
[connection signal="pressed" from="PlaceholderObject5/PlacementDetector" to="." method="_on_PlacementDetector_pressed3"]
[connection signal="pressed" from="PlaceholderObject6/PlacementDetector" to="." method="_on_PlacementDetector_pressed4"]
